[package]
name = "rmp-futures"
description = "Async Rust MessagePack and MessagePack-RPC"
version = "0.3.2"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
repository = "https://github.com/tylerwhall/rmp-futures"
documentation = "https://docs.rs/rmp-futures"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding", "asynchronous"]
edition = "2024"

[dependencies]
byteorder = "1.5"
enum-primitive-derive = "0.3"
futures = "0.3.31"
num-traits = "0.2"
rmp = "0.8"
rmpv = "1.3"
slab = "0.4"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }

[profile.release]
lto = true
debug = false
